--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 model_railway: Broke Hackers' Model Train System
 
-You can find the source codes and model files for my Hackaday Prize project.
+You can find here the source codes and model files for my Hackaday Prize project.
 
 http://hackaday.io/project/2250
 http://lszabi.netai.net/index.php?p=view&id=8
