--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-model_railway: Broke Hackers' Model Train System
+Broke Hackers' Model Railway
 
 You can find here the source codes, schematics and model files for my Hackaday Prize project.
 
